update about description add english certificate caching images

--- a/PersonalSiteWeb/Views/Home/Index.cshtml
+++ b/PersonalSiteWeb/Views/Home/Index.cshtml
@@ -23,7 +23,7 @@
         <div class="col-xs-12 text-center bio-description">
             <h2>About</h2>
             <hr class="hr-star" />
-            <div class="description">".NET Engineer working with Software Development predominantly using ASP.NET, C# and SQL Server since 2007 with experience in projects of different commercial businesses and corporations (Tourism, Online Gambling, Healthcare, Education and Consulting). Available for hiring in Sydney or remotely."</div>
+            <div class="description">"Passionate .NET Engineer working with Software Development predominantly using ASP.NET, C# and SQL Server since 2007 with experience in projects of different commercial businesses and corporations (Tourism, Online Gambling, Healthcare, Education and Consulting). Available for hiring in Sydney or remotely."</div>
         </div>
     </div>
 </div>
